--- a/03_JQuery_JS/项目实践01_图片轮播/css/style.css
+++ b/03_JQuery_JS/项目实践01_图片轮播/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
 }
+
 ul{
     list-style: none;
 }
@@ -83,4 +84,66 @@ body{
     box-shadow: 0 0 0 2px rgba(7, 17, 27, 0.4) inset;
     background-color: #fff;
     
+}
+
+
+/* 导航菜单 */
+.menu-box{
+    width: 244px;
+    height: 460px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: rgba(7, 17, 27, 0.5);
+    z-index: 1;  /* 由于后面的banner的position属性是relative, 且位置在menu-box后面, 优先级比menu-box高, menu-box会被遮住 */ 
+}
+.menu-content{
+    width: 244px;
+    height: 454xp;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    padding-top: 6px;
+    /* background-color: aqua;  */
+}
+
+a:link, a:visited{
+    text-decoration: none;
+}
+.menu-item{
+    height: 64px;
+    line-height: 66px;
+    font-size: 16px;
+    padding: 0 24px;
+    position: relative;
+}
+.menu-item a:link, .menu-item a:visited{
+    color: #fff;
+}
+.menu-item a{
+    display: block;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    padding-left: 8px;
+    height: 63px;;
+}
+@font-face{
+    font-family: "iconfont";
+    src: url("../img/font/iconfont.eot");
+    src: url("../img/font/iconfont.eot") format("embedded-opentype"),
+         url("../img/font/iconfont.woff") format("woff"),
+         url("../img/font/iconfont.ttf") format("truetype"),
+         url("../img/font/iconfont.svg#iconfont") format("svg");
+
+}
+
+.menu-item i{
+    position: absolute;  /* 参照menu-item */ 
+    right: 32px;
+    font-size: 24px;
+    top: 0;
+    font-family:  "iconfont";
+    font-style: normal;
+    font-weight: normal;
+    color: rgba(255, 255, 255, 0.5);
 }
