--- a/03_JQuery_JS/项目实践01_图片轮播/css/style.css
+++ b/03_JQuery_JS/项目实践01_图片轮播/css/style.css
@@ -147,3 +147,44 @@ a:link, a:visited{
     font-weight: normal;
     color: rgba(255, 255, 255, 0.5);
 }
+
+.sub-menu{
+    width: 730px;
+    height: 458px;
+    border: 1px solid #d9dde1;
+    background: #fff;
+    position: absolute;
+    left: 244px;
+    top: 0;
+    z-index: 999;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+}
+.innerBox{
+    width: 100%;
+    height: 100%;
+    background: url(../img/fe.png) no-repeat;
+}
+.sub-innerBox{
+    width: 652px;
+    margin-left: 50px;
+    overflow: hidden;
+}
+.title{
+    color: #f01414;
+    font-size: 16px;
+    line-height: 16px;
+    margin: 28px 0 30px 0;
+    font-weight: bold;
+}
+.sub-row{
+    margin-bottom: 25px;
+}
+.bold{
+    font-weight: bold;
+}
+.mr10{
+    margin-right: 10px;
+}
+.ml10{
+    margin-left: 10px;
+}
