--- a/03_JQuery_JS/项目实践01_图片轮播/css/style.css
+++ b/03_JQuery_JS/项目实践01_图片轮播/css/style.css
@@ -125,7 +125,7 @@ a:link, a:visited{
     display: block;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     padding-left: 8px;
-    height: 63px;;
+    height: 63px;
 }
 @font-face{
     font-family: "iconfont";
